chore: extract common config consts

--- a/templates/FINAL_PROPOSAL_UPDATED.html
+++ b/templates/FINAL_PROPOSAL_UPDATED.html
@@ -124,7 +124,7 @@
                 <!-- Logo -->
                 <tr>
                     <td align="left">
-                        <img src="https://jdlandscaping-assets.s3.amazonaws.com/emails/logo.png" width="120"
+                        <img alt="logo" src="{{mailAssetsRoot}}/logo.png" width="120"
                              style="-ms-interpolation-mode: bicubic;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;">
                     </td>
                 </tr>
@@ -145,11 +145,11 @@
                                     <div>
                                         <p style="padding-bottom: 12px;">Hi <span
                                                 style="color: #07a39d;">{{name}},</span></p>
-                                        <p style="padding-bottom: 12px;">J & D Landscaping has submitted an updated
+                                        <p style="padding-bottom: 12px;">{{companyName}} has submitted an updated
                                             final proposal for your project.</p>
                                         <p style="padding-bottom: 12px;"><span
                                                 style="font-weight: 700;">Please review</span> all the details and if
-                                            you're satisfied, accept the proposal to hire J & D Landscaping.</p>
+                                            you're satisfied, accept the proposal to hire {{companyName}}.</p>
                                     </div>
                                 </td>
                             </tr>
@@ -163,7 +163,7 @@
                             <tr>
                                 <td style="padding-bottom: 30px;">
                                     If you have any questions please reach out to your project consultant or login to
-                                    message J & D Landscaping.
+                                    message {{companyName}}.
                                 </td>
                             </tr>
                         </table>
@@ -176,11 +176,11 @@
     <tr>
         <td align="center" class="social" valign="top"
             style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt; padding-bottom: 30px; padding-top: 40px;">
-            <a href="https://www.facebook.com/JDLandscapingLLC/" style="margin-right: 3px;"><img width="21"
-                                                                                                 src="https://assets.jdlandscaping.net/emails/facebook.png"
+            <a href="{{companyFacebookLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                 src="{{mailAssetsRoot}}/facebook.png"
                                                                                                  alt="facebook"></a>
-            <a href="https://www.instagram.com/jdlandscapingllc/" style="margin-right: 3px;"><img width="21"
-                                                                                                  src="https://assets.jdlandscaping.net/emails/instagram.png"
+            <a href="{{companyInstagramLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                  src="{{mailAssetsRoot}}/instagram.png"
                                                                                                   alt="instagram"></a>
         </td>
     </tr>
@@ -188,8 +188,8 @@
     <tr>
         <td align="center" class="unsubscribe"
             style="color: #666666; font-size: 10px; line-height: 16px; padding-bottom: 30px;">
-            Sent from J & D Landscaping<br>
-            J & D Landscaping LLC, 123 South Main St., East Windsor, CT 06088<br>
+            {{companyName}}<br>
+            {{companyName}} {{companyType}}, {{companyAddress}}<br>
             <a href="{{unsubscribeLink}}" style="color: #666666; text-decoration: underline;">Unsubscribe</a>
         </td>
     </tr>
