--- a/templates/INVITATION.html
+++ b/templates/INVITATION.html
@@ -124,7 +124,7 @@
                 <!-- Logo -->
                 <tr>
                     <td align="left">
-                        <img src="https://jdlandscaping-assets.s3.amazonaws.com/emails/logo.png" width="120"
+                        <img alt="logo" src="{{mailAssetsRoot}}/logo.png" width="120"
                              style="-ms-interpolation-mode: bicubic;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;">
                     </td>
                 </tr>
@@ -145,7 +145,7 @@
                             </tr>
                             <tr>
                                 <td style="padding-right: 20px; width: 75%;">
-                                    <div style="padding-bottom: 20px;">You are invited to J & D Landscaping.<br>
+                                    <div style="padding-bottom: 20px;">You are invited to {{companyName}}.<br>
                                         Your temporary password is
                                     </div>
                                     <div style="color: #F18F01; font-size: 1.5rem; padding-bottom: 30px;">
@@ -156,7 +156,7 @@
                                        target="_blank">Continue</a>
                                 </td>
                                 <td style="width: 100px; text-align: center; vertical-align: top;">
-                                    <img src="https://assets.jdlandscaping.net/emails/security-teal.png"
+                                    <img src="{{mailAssetsRoot}}/security-teal.png"
                                          style="width: 100px; height: auto;" width="100" alt="security-teal">
                                 </td>
                             </tr>
@@ -169,9 +169,9 @@
                     <td class="description" style="padding-top: 30px;">
                         If you have any questions please reach us out via <a
                             style="text-decoration: none; color: #07a39d;"
-                            href="https://www.instagram.com/jdlandscapingllc/">Instagram</a>, email <a
-                            style="text-decoration: none; color: #07a39d;" href="mailto:joe@jdlandscaping.net">joe@jdlandscaping.net</a>
-                        or by phone 860 324 6218.
+                            href="{{companyInstagramLink}}">Instagram</a>, email <a
+                            style="text-decoration: none; color: #07a39d;" href="mailto:{{adminJoeEmail}}">{{adminJoeEmail}}</a>
+                        or by phone {{companyPhone}}.
                     </td>
                 </tr>
             </table>
@@ -181,11 +181,11 @@
     <tr>
         <td align="center" class="social" valign="top"
             style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt; padding-bottom: 30px; padding-top: 40px;">
-            <a href="https://www.facebook.com/JDLandscapingLLC/" style="margin-right: 3px;"><img width="21"
-                                                                                                 src="https://assets.jdlandscaping.net/emails/facebook.png"
+            <a href="{{companyFacebookLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                 src="{{mailAssetsRoot}}/facebook.png"
                                                                                                  alt="facebook"></a>
-            <a href="https://www.instagram.com/jdlandscapingllc/" style="margin-right: 3px;"><img width="21"
-                                                                                                  src="https://assets.jdlandscaping.net/emails/instagram.png"
+            <a href="{{companyInstagramLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                  src="{{mailAssetsRoot}}/instagram.png"
                                                                                                   alt="instagram"></a>
         </td>
     </tr>
@@ -193,8 +193,8 @@
     <tr>
         <td align="center" class="unsubscribe"
             style="color: #666666; font-size: 10px; line-height: 16px; padding-bottom: 30px;">
-            Sent from J & D Landscaping<br>
-            J & D Landscaping LLC, 123 South Main St., East Windsor, CT 06088<br>
+            {{companyName}}<br>
+            {{companyName}} {{companyType}}, {{companyAddress}}<br>
             <a href="{{unsubscribeLink}}" style="color: #666666; text-decoration: underline;">Unsubscribe</a>
         </td>
     </tr>
