--- a/templates/PROJECT_CREATED.html
+++ b/templates/PROJECT_CREATED.html
@@ -124,7 +124,7 @@
                 <!-- Logo -->
                 <tr>
                     <td align="left">
-                        <img src="https://jdlandscaping-assets.s3.amazonaws.com/emails/logo.png" width="120"
+                        <img alt="logo" src="{{mailAssetsRoot}}/logo.png" width="120"
                              style="-ms-interpolation-mode: bicubic;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;">
                     </td>
                 </tr>
@@ -152,7 +152,7 @@
                                     </div>
                                 </td>
                                 <td style="width: 30%; text-align: center; vertical-align: bottom;">
-                                    <img src="https://assets.jdlandscaping.net/emails/call-guy.png"
+                                    <img src="{{mailAssetsRoot}}/call-guy.png"
                                          style="height: auto; width: 100%;" alt="call-guy">
                                 </td>
                             </tr>
@@ -166,11 +166,11 @@
     <tr>
         <td align="center" class="social" valign="top"
             style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt; padding-bottom: 30px; padding-top: 40px;">
-            <a href="https://www.facebook.com/JDLandscapingLLC/" style="margin-right: 3px;"><img width="21"
-                                                                                                 src="https://assets.jdlandscaping.net/emails/facebook.png"
+            <a href="{{companyFacebookLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                 src="{{mailAssetsRoot}}/facebook.png"
                                                                                                  alt="facebook"></a>
-            <a href="https://www.instagram.com/jdlandscapingllc/" style="margin-right: 3px;"><img width="21"
-                                                                                                  src="https://assets.jdlandscaping.net/emails/instagram.png"
+            <a href="{{companyInstagramLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                  src="{{mailAssetsRoot}}/instagram.png"
                                                                                                   alt="instagram"></a>
         </td>
     </tr>
@@ -178,8 +178,8 @@
     <tr>
         <td align="center" class="unsubscribe"
             style="color: #666666; font-size: 10px; line-height: 16px; padding-bottom: 30px;">
-            Sent from J & D Landscaping<br>
-            J & D Landscaping LLC, 123 South Main St., East Windsor, CT 06088<br>
+            {{companyName}}<br>
+            {{companyName}} {{companyType}}, {{companyAddress}}<br>
             <a href="{{unsubscribeLink}}" style="color: #666666; text-decoration: underline;">Unsubscribe</a>
         </td>
     </tr>
