--- a/templates/TESTIMONIAL_REQUEST.html
+++ b/templates/TESTIMONIAL_REQUEST.html
@@ -124,7 +124,7 @@
                 <!-- Logo -->
                 <tr>
                     <td align="left">
-                        <img src="https://jdlandscaping-assets.s3.amazonaws.com/emails/logo.png" width="120"
+                        <img alt="logo" src="{{mailAssetsRoot}}/logo.png" width="120"
                              style="-ms-interpolation-mode: bicubic;border: 0;height: auto;line-height: 100%;outline: none;text-decoration: none;">
                     </td>
                 </tr>
@@ -145,7 +145,7 @@
                                     <div>
                                         <p style="padding-bottom: 12px;">Hi <span
                                                 style="color: #07a39d;">{{name}},</span></p>
-                                        <p style="padding-bottom: 12px;">Thank you for Hiring J & D Landscaping to
+                                        <p style="padding-bottom: 12px;">Thank you for Hiring {{companyName}} to
                                             complete your outdoor project, it was a pleasure working with you.</p>
                                         <p style="padding-bottom: 12px;">We would love if you could help us continue to
                                             grow by leaving us a great <span
@@ -164,13 +164,13 @@
                             <tr>
                                 <td style="padding-bottom: 30px;">
                                     If you have any questions please reach out to your project consultant or login to
-                                    message J & D Landscaping.
+                                    message {{companyName}}.
                                 </td>
                             </tr>
                             <tr>
                                 <td style="padding-bottom: 60px;">
                                     Thank you - Joe and Nick Masciovecchio<br>
-                                    <span style="font-size: 11px; color: #07a39d;">Owner of J & D Landscaping</span>
+                                    <span style="font-size: 11px; color: #07a39d;">Owner of {{companyName}}</span>
                                 </td>
                             </tr>
                         </table>
@@ -183,11 +183,11 @@
     <tr>
         <td align="center" class="social" valign="top"
             style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt; padding-bottom: 30px; padding-top: 40px;">
-            <a href="https://www.facebook.com/JDLandscapingLLC/" style="margin-right: 3px;"><img width="21"
-                                                                                                 src="https://assets.jdlandscaping.net/emails/facebook.png"
+            <a href="{{companyFacebookLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                 src="{{mailAssetsRoot}}/facebook.png"
                                                                                                  alt="facebook"></a>
-            <a href="https://www.instagram.com/jdlandscapingllc/" style="margin-right: 3px;"><img width="21"
-                                                                                                  src="https://assets.jdlandscaping.net/emails/instagram.png"
+            <a href="{{companyInstagramLink}}" style="margin-right: 3px;"><img width="21"
+                                                                                                  src="{{mailAssetsRoot}}/instagram.png"
                                                                                                   alt="instagram"></a>
         </td>
     </tr>
@@ -195,8 +195,8 @@
     <tr>
         <td align="center" class="unsubscribe"
             style="color: #666666; font-size: 10px; line-height: 16px; padding-bottom: 30px;">
-            Sent from J & D Landscaping<br>
-            J & D Landscaping LLC, 123 South Main St., East Windsor, CT 06088<br>
+            {{companyName}}<br>
+            {{companyName}} {{companyType}}, {{companyAddress}}<br>
             <a href="{{unsubscribeLink}}" style="color: #666666; text-decoration: underline;">Unsubscribe</a>
         </td>
     </tr>
