fix: password reset email

--- a/templates/CONTRACTOR_INVITATION.html
+++ b/templates/CONTRACTOR_INVITATION.html
@@ -172,7 +172,7 @@
                             style="text-decoration: none; color: #07a39d;"
                             href="{{companyInstagramLink}}">Instagram</a>, email <a
                             style="text-decoration: none; color: #07a39d;" href="mailto:{{adminJoeEmail}}">{{adminJoeEmail}}</a>
-                        or by phone 860 324 6218.
+                        or by phone {{companyPhone}}.
                     </td>
                 </tr>
             </table>
