chore: update email templates chore: update milestone comment

--- a/templates/MESSAGE_RECEIVED.html
+++ b/templates/MESSAGE_RECEIVED.html
@@ -147,7 +147,7 @@
                             <tr>
                                 <td style="padding-right: 20px;">
                                     <div style="padding-bottom: 20px;">You've received a new message from <span
-                                            style="color: #07a39d; font-weight: 700;">{{senderName}}</span>.
+                                            style="color: #07a39d; font-weight: 700;">{{senderName}}</span>. Please click on "Reply" below to respond to this message.
                                     </div>
                                     <div style="padding-bottom: 30px; padding-top: 20px;">
                                         "{{messageContent}}"
