--- a/templates/FINAL_PROPOSAL_ACCEPTED.html
+++ b/templates/FINAL_PROPOSAL_ACCEPTED.html
@@ -144,11 +144,9 @@
                                 <td style="padding-right: 20px;">
                                     <p style="padding-bottom: 12px;">Hi <span style="color: #07a39d;">{{name}},</span>
                                     </p>
-                                    <p style="padding-bottom: 12px;">You have already made your first deposit and should
-                                        expect {{companyName}} to reach out to you shortly.</p>
-                                    <p style="padding-bottom: 12px;">You will be required to submit the next milestone
-                                        payment when the {{companyName}} officially starts the project and requests
-                                        payment.</p>
+                                    <p style="padding-bottom: 12px;">We have received your deposit, and we will reach out to you shortly to confirm the details and start date for your project.</p>
+                                    <p style="padding-bottom: 12px;">Your next milestone payment will be due when {{companyName}} starts the project. You will receive an email notification for your next payment, and your project profile will be updated as well.</p>
+                                    <p style="padding-bottom: 12px;">Please reach out to {{consultantName}}, your {{companyName}} Project Consultant, if you have any questions or to discuss your project. You are on your way to a great result.</p>
                                     <div style="text-align: center; padding-top: 20px;">
                                         <a href="{{projectLink}}"
                                            style="background-color:#07a39d; border:0px solid #333333; border-color:#333333; border-radius:3px; border-width:0px; color:#ffffff; display:inline-block; font-size:13px; font-weight:600; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style: solid;"
