--- a/templates/INVITATION.html
+++ b/templates/INVITATION.html
@@ -132,7 +132,7 @@
                 <!-- Title -->
                 <tr>
                     <td style="font-size: 1.5rem; font-weight: 900; line-height: 1.875rem; color: #3e3e3e; padding-top: 40px; padding-bottom: 40px;">
-                        Please finishe<br>setting up your account
+                        Please finish<br>setting up your account
                     </td>
                 </tr>
 
