--- a/templates/PROJECT_CREATED.html
+++ b/templates/PROJECT_CREATED.html
@@ -149,6 +149,11 @@
                                             you within 24 hours to provide an estimate and coordinate a site visit.</p>
                                         <p>If you have any questions in the mean time, please contact us via live chat
                                             Monday through Saturday 8am to 5pm.</p>
+                                        <div style="text-align: center;">
+                                            <a href="{{projectLink}}"
+                                           style="background-color:#07a39d; border:0px solid #333333; border-color:#333333; border-radius:3px; border-width:0px; color:#ffffff; display:inline-block; font-size:13px; font-weight:600; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style: solid;"
+                                           target="_blank">See Project</a>
+                                        </div>
                                     </div>
                                 </td>
                                 <td style="width: 30%; text-align: center; vertical-align: bottom;">
