issue #74 - contractor email content update update: contractor invitation email

--- a/templates/CONTRACTOR_INVITATION.html
+++ b/templates/CONTRACTOR_INVITATION.html
@@ -132,7 +132,7 @@
                 <!-- Title -->
                 <tr>
                     <td style="font-size: 1.5rem; font-weight: 900; line-height: 1.875rem; color: #3e3e3e; padding-top: 40px; padding-bottom: 40px;">
-                        You have been invited as a<br>Contractor candidate!
+                        Great news! You have been invited to apply as a United Hardscapes Authorized Contractor!
                     </td>
                 </tr>
 
@@ -145,7 +145,7 @@
                             </tr>
                             <tr>
                                 <td style="padding-right: 20px; width: 75%;">
-                                    <div style="padding-bottom: 20px;">Great news, you have been invited to become a contractor!<br>
+                                    <div style="padding-bottom: 20px;">Please visit United Hardscapes to complete your profile.<br>
                                         Your temporary password is
                                     </div>
                                     <div style="color: #F18F01; font-size: 1.5rem; padding-bottom: 30px;">
