--- a/templates/BASIC_PROFILE_SENT.html
+++ b/templates/BASIC_PROFILE_SENT.html
@@ -132,7 +132,7 @@
                 <!-- Title -->
                 <tr>
                     <td style="font-size: 1.5rem; font-weight: 900; line-height: 1.875rem; color: #3e3e3e; padding-top: 40px; padding-bottom: 40px;">
-                        Your account<br>is almost complete!
+                        Your basic profile info<br>has been sent!
                     </td>
                 </tr>
 
@@ -146,19 +146,14 @@
                             <tr>
                                 <td style="padding-right: 20px; width: 75%;">
                                     <div style="padding-bottom: 20px;">
-                                        Complete your payment setup today to create your account, and start growing your business as a United Hardscapes Authorized Contractor!
+                                        Your information has been successfully sent and is ready to be reviewed with one of our experts.
+                                        <br><br>
+                                        Once your application is accepted, you will receive an email to continue to the next step.
                                     </div>
                                 </td>
                                 <td style="width: 100px; text-align: center; vertical-align: top;">
-                                    <img src="{{mailAssetsRoot}}/contract-teal.png"
+                                    <img src="{{mailAssetsRoot}}/check-teal.png"
                                          style="width: 100px; height: auto;" width="100" alt="contract-teal">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2" style="text-align: center;">
-                                    <a href="{{paymentSetupLink}}"
-                                       style="background-color:#07a39d; border:0px solid #333333; border-color:#333333; border-radius:3px; border-width:0px; color:#ffffff; display:inline-block; font-size:13px; font-weight:600; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style: solid;"
-                                       target="_blank">Go to Payment Setup</a>
                                 </td>
                             </tr>
                         </table>
@@ -172,11 +167,11 @@
         <td align="center" class="social" valign="top"
             style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt; padding-bottom: 30px; padding-top: 40px;">
             <a href="{{companyFacebookLink}}" style="margin-right: 3px;"><img width="21"
-                                                                              src="{{mailAssetsRoot}}/facebook.png"
-                                                                              alt="facebook"></a>
+                                                                                                 src="{{mailAssetsRoot}}/facebook.png"
+                                                                                                 alt="facebook"></a>
             <a href="{{companyInstagramLink}}" style="margin-right: 3px;"><img width="21"
-                                                                               src="{{mailAssetsRoot}}/instagram.png"
-                                                                               alt="instagram"></a>
+                                                                                                  src="{{mailAssetsRoot}}/instagram.png"
+                                                                                                  alt="instagram"></a>
         </td>
     </tr>
 
