--- a/templates/CONTRACTOR_PROFILE_APPROVED.html
+++ b/templates/CONTRACTOR_PROFILE_APPROVED.html
@@ -132,7 +132,7 @@
                 <!-- Title -->
                 <tr>
                     <td style="font-size: 1.5rem; font-weight: 900; line-height: 1.875rem; color: #3e3e3e; padding-top: 40px; padding-bottom: 40px;">
-                        Your account<br>is almost complete!
+                        Your application to become<br>a Contractor has been approved!
                     </td>
                 </tr>
 
@@ -146,7 +146,9 @@
                             <tr>
                                 <td style="padding-right: 20px; width: 75%;">
                                     <div style="padding-bottom: 20px;">
-                                        Complete your payment setup today to create your account, and start growing your business as a United Hardscapes Authorized Contractor!
+                                        Great news, you have been accepted as an Authorized Contractor!
+                                        <br><br>
+                                        Now you can complete the Legal terms documentation signage.
                                     </div>
                                 </td>
                                 <td style="width: 100px; text-align: center; vertical-align: top;">
@@ -156,9 +158,9 @@
                             </tr>
                             <tr>
                                 <td colspan="2" style="text-align: center;">
-                                    <a href="{{paymentSetupLink}}"
+                                    <a href="{{legalTermsLink}}"
                                        style="background-color:#07a39d; border:0px solid #333333; border-color:#333333; border-radius:3px; border-width:0px; color:#ffffff; display:inline-block; font-size:13px; font-weight:600; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style: solid;"
-                                       target="_blank">Go to Payment Setup</a>
+                                       target="_blank">Go to Legal Terms</a>
                                 </td>
                             </tr>
                         </table>
@@ -172,11 +174,11 @@
         <td align="center" class="social" valign="top"
             style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt; padding-bottom: 30px; padding-top: 40px;">
             <a href="{{companyFacebookLink}}" style="margin-right: 3px;"><img width="21"
-                                                                              src="{{mailAssetsRoot}}/facebook.png"
-                                                                              alt="facebook"></a>
+                                                                                                 src="{{mailAssetsRoot}}/facebook.png"
+                                                                                                 alt="facebook"></a>
             <a href="{{companyInstagramLink}}" style="margin-right: 3px;"><img width="21"
-                                                                               src="{{mailAssetsRoot}}/instagram.png"
-                                                                               alt="instagram"></a>
+                                                                                                  src="{{mailAssetsRoot}}/instagram.png"
+                                                                                                  alt="instagram"></a>
         </td>
     </tr>
 
